--- a/admin/src/components/lab_components/LabTable.css
+++ b/admin/src/components/lab_components/LabTable.css
@@ -5,12 +5,13 @@
   /* padding: 20px; */
 }
 .novaTable {
-    width: 70%;
+    width: 82vw;
     border-radius: 10px;
     border-color: black;
     border-style: groove;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 7px;
+    margin-left: 7px;
+    margin-right: 0px !important;
 }
 .headerStyles {
   background: rebeccapurple;
@@ -26,10 +27,10 @@
   width: 300px;
   border: '1px solid #d9d9d9';
   padding: '8px 12px';
-  fontSize: '16px';
-  borderRadius: '4px';
+  font-size: '16px';
+  border-radius: '4px';
 };
 .textStyle{
   color: 'red';
-    fontSize: '24px';
+    font-size: '24px';
 }
